--- a/webpack-getting-started/package.json
+++ b/webpack-getting-started/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "build:css": "webpack --config ./css-style-loader/webpack.config.js",
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
-    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
+    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
+    "build:prepro": "webpack-dev-server --config ./preprocessors/webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -20,6 +21,8 @@
     "css-loader": "3.4.2",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "4.13.1",
+    "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
